--- a/packages/ui/react-ui-stack/package.json
+++ b/packages/ui/react-ui-stack/package.json
@@ -22,6 +22,7 @@
     "@dxos/react-ui": "workspace:*",
     "@dxos/react-ui-mosaic": "workspace:*",
     "@dxos/react-ui-theme": "workspace:*",
+    "@tanstack/react-virtual": "^3.0.1",
     "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "chromatic": "^7.5.0",
+    "kbar": "^0.1.0-beta.44",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.3.9",
