--- a/packages/ui/react-ui-stack/package.json
+++ b/packages/ui/react-ui-stack/package.json
@@ -22,6 +22,7 @@
     "@dxos/react-ui": "workspace:*",
     "@dxos/react-ui-mosaic": "workspace:*",
     "@dxos/react-ui-theme": "workspace:*",
+    "@fluentui/react-tabster": "^9.12.0",
     "@tanstack/react-virtual": "^3.0.1",
     "react-resize-detector": "^7.1.2"
   },
