--- a/packages/apps/plugins/plugin-stack/tsconfig.json
+++ b/packages/apps/plugins/plugin-stack/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../../../common/util"
     },
     {
+      "path": "../../../experimental/matrix"
+    },
+    {
       "path": "../../../sdk/app-framework"
     },
     {
@@ -34,9 +37,6 @@
     },
     {
       "path": "../../../ui/react-ui-mosaic"
-    },
-    {
-      "path": "../../../ui/react-ui-stack"
     },
     {
       "path": "../../../ui/react-ui-theme"
