--- a/packages/experimental/matrix/package.json
+++ b/packages/experimental/matrix/package.json
@@ -16,31 +16,29 @@
     "src"
   ],
   "dependencies": {
+    "@dxos/config": "workspace:*",
+    "@dxos/echo-schema": "workspace:*",
     "@dxos/react-ui": "workspace:*",
     "@dxos/react-ui-mosaic": "workspace:*",
     "@dxos/react-ui-theme": "workspace:*",
     "@fluentui/react-tabster": "^9.12.0",
+    "@phosphor-icons/react": "^2.0.5",
     "@tanstack/react-virtual": "^3.0.1",
+    "kbar": "^0.1.0-beta.44",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
-    "@dxos/echo-schema": "workspace:*",
+    "@dxos/react-shell": "workspace:*",
     "@dxos/storybook-utils": "workspace:*",
+    "@dxos/vault": "workspace:*",
     "@faker-js/faker": "^8.0.2",
-    "@phosphor-icons/react": "^2.0.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.3.9",
     "vite-plugin-turbosnap": "^1.0.2"
-  },
-  "peerDependencies": {
-    "@phosphor-icons/react": "^2.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
