--- a/packages/experimental/matrix/package.json
+++ b/packages/experimental/matrix/package.json
@@ -36,6 +36,7 @@
     "@dxos/vault": "workspace:*",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.3.9",
