--- a/packages/experimental/matrix-demo/package.json
+++ b/packages/experimental/matrix-demo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dxos/react-ui-stack",
+  "name": "@dxos/matrix-demo",
   "version": "0.3.8",
-  "description": "A stack component.",
+  "description": "A stack demo.",
   "homepage": "https://dxos.org",
   "bugs": "https://github.com/dxos/dxos/issues",
   "license": "MIT",
