feat(plugin-debug): expose changeStorageVersionInMetadata for testing

--- a/packages/apps/plugins/plugin-debug/package.json
+++ b/packages/apps/plugins/plugin-debug/package.json
@@ -24,9 +24,10 @@
   ],
   "dependencies": {
     "@dxos/async": "workspace:*",
-    "@dxos/client": "workspace:*",
+    "@dxos/client-services": "workspace:*",
     "@dxos/devtools": "workspace:*",
     "@dxos/echo-generator": "workspace:*",
+    "@dxos/echo-pipeline": "workspace:*",
     "@dxos/echo-schema": "workspace:*",
     "@dxos/invariant": "workspace:*",
     "@dxos/keys": "workspace:*",
