--- a/packages/apps/plugins/plugin-debug/tsconfig.json
+++ b/packages/apps/plugins/plugin-debug/tsconfig.json
@@ -45,6 +45,9 @@
       "path": "../../../core/echo/echo-generator"
     },
     {
+      "path": "../../../core/echo/echo-pipeline"
+    },
+    {
       "path": "../../../core/echo/echo-schema"
     },
     {
@@ -60,7 +63,7 @@
       "path": "../../../sdk/app-framework"
     },
     {
-      "path": "../../../sdk/client"
+      "path": "../../../sdk/client-services"
     },
     {
       "path": "../../../sdk/react-client"
