--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "uuid": "^8.3.2",
     "vite": "^4.3.9",
     "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0",
     "vitest": "^0.31.2",
     "wait-for-expect": "^3.0.2"
   },
