--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/zen-observable": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "@vitest/browser": "0.34.6",
     "@vuepress/client": "2.0.0-rc.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -125,7 +126,7 @@
     "uuid": "^8.3.2",
     "vite": "^4.3.9",
     "vite-plugin-top-level-await": "^1.4.1",
-    "vitest": "^0.31.2",
+    "vitest": "^0.34.6",
     "wait-for-expect": "^3.0.2"
   },
   "engines": {
