--- a/packages/common/node-std/package.json
+++ b/packages/common/node-std/package.json
@@ -9,6 +9,7 @@
   "exports": {
     "./assert": "./dist/lib/browser/assert.mjs",
     "./crypto": "./dist/lib/browser/crypto.mjs",
+    "./buffer": "./dist/lib/browser/buffer.mjs",
     "./events": "./dist/lib/browser/events.mjs",
     "./globals": "./dist/lib/browser/globals.mjs",
     "./inject-globals": "./dist/lib/browser/inject-globals.mjs",
@@ -22,11 +23,13 @@
   ],
   "dependencies": {
     "assert": "^2.0.0",
-    "buffer": "^6.0.3",
     "events": "^3.3.0",
     "path-browserify": "^1.0.1",
     "readable-stream": "^3.6.0",
     "util": "^0.12.4"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   },
   "publishConfig": {
     "access": "public"
