--- a/packages/common/node-std/project.json
+++ b/packages/common/node-std/project.json
@@ -7,6 +7,8 @@
         "bundlePackages": [
           "assert",
           "available-typed-arrays",
+          "base64-js",
+          "buffer",
           "call-bind",
           "define-data-property",
           "define-properties",
@@ -17,23 +19,21 @@
           "function-bind",
           "get-intrinsic",
           "gopd",
-          "buffer",
           "has",
           "has-property-descriptors",
           "has-proto",
           "has-symbols",
           "has-tostringtag",
           "hasown",
+          "ieee754",
           "inherits",
           "is-arguments",
           "is-callable",
           "is-generator-function",
           "is-nan",
           "is-typed-array",
-          "ieee754",
           "object-is",
           "object-keys",
-          "base64-js",
           "path-browserify",
           "set-function-length",
           "string_decoder",
@@ -43,8 +43,8 @@
         ],
         "entryPoints": [
           "packages/common/node-std/src/assert.js",
-          "packages/common/node-std/src/crypto.js",
           "packages/common/node-std/src/buffer.js",
+          "packages/common/node-std/src/crypto.js",
           "packages/common/node-std/src/events.js",
           "packages/common/node-std/src/fs.js",
           "packages/common/node-std/src/globals.js",
@@ -53,7 +53,9 @@
           "packages/common/node-std/src/stream.js",
           "packages/common/node-std/src/util.js"
         ],
-        "platforms": ["browser"]
+        "platforms": [
+          "browser"
+        ]
       }
     },
     "lint": {}
