--- a/packages/apps/templates/hello-template/project.json
+++ b/packages/apps/templates/hello-template/project.json
@@ -11,6 +11,11 @@
     },
     "lint": {},
     "test": {
+      "dependsOn": [
+        {
+          "target": "build"
+        }
+      ],
       "options": {
         "checkLeaks": false,
         "ciEnvironments": [
