--- a/packages/common/node-std/project.json
+++ b/packages/common/node-std/project.json
@@ -28,6 +28,9 @@
           "is-callable",
           "is-generator-function",
           "is-nan",
+          "buffer",
+          "base64-js",
+          "ieee754",
           "is-typed-array",
           "object-is",
           "object-keys",
@@ -43,8 +46,10 @@
           "packages/common/node-std/src/crypto.js",
           "packages/common/node-std/src/events.js",
           "packages/common/node-std/src/fs.js",
+          "packages/common/node-std/src/fs/promises.js",
           "packages/common/node-std/src/globals.js",
           "packages/common/node-std/src/inject-globals.js",
+          "packages/common/node-std/src/buffer.js",
           "packages/common/node-std/src/path.js",
           "packages/common/node-std/src/stream.js",
           "packages/common/node-std/src/util.js"
