--- a/packages/common/node-std/project.json
+++ b/packages/common/node-std/project.json
@@ -7,6 +7,8 @@
         "bundlePackages": [
           "assert",
           "available-typed-arrays",
+          "base64-js",
+          "buffer",
           "call-bind",
           "define-data-property",
           "define-properties",
@@ -23,14 +25,12 @@
           "has-symbols",
           "has-tostringtag",
           "hasown",
+          "ieee754",
           "inherits",
           "is-arguments",
           "is-callable",
           "is-generator-function",
           "is-nan",
-          "buffer",
-          "base64-js",
-          "ieee754",
           "is-typed-array",
           "object-is",
           "object-keys",
@@ -43,27 +43,24 @@
         ],
         "entryPoints": [
           "packages/common/node-std/src/assert.js",
+          "packages/common/node-std/src/buffer.js",
           "packages/common/node-std/src/crypto.js",
           "packages/common/node-std/src/events.js",
           "packages/common/node-std/src/fs.js",
           "packages/common/node-std/src/fs/promises.js",
           "packages/common/node-std/src/globals.js",
           "packages/common/node-std/src/inject-globals.js",
-          "packages/common/node-std/src/buffer.js",
           "packages/common/node-std/src/path.js",
           "packages/common/node-std/src/stream.js",
-          "packages/common/node-std/src/util.js"
+          "packages/common/node-std/src/util.js",
+          "packages/common/node-std/src/os.js"
         ],
-        "platforms": [
-          "browser"
-        ]
+        "platforms": ["browser"]
       }
     },
     "lint": {}
   },
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": [
-    "esbuild"
-  ],
+  "implicitDependencies": ["esbuild"],
   "name": "node-std"
 }
