--- a/packages/devtools/cli/package.json
+++ b/packages/devtools/cli/package.json
@@ -75,15 +75,23 @@
   },
   "devDependencies": {
     "@oclif/test": "^2.3.31",
+    "@phosphor-icons/react": "^2.0.5",
     "@types/cli-progress": "^3.11.0",
     "@types/fs-extra": "^9.0.4",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash.defaultsdeep": "^4.6.6",
     "@types/node": "^18.11.9",
     "@types/node-fetch": "^2.5.10",
+    "@types/react-dom": "^18.0.6",
     "oclif": "^3.7.0",
+    "prettier": "^3.2.4",
     "shx": "^0.3.3",
     "typescript": "^5.2.2"
+  },
+  "peerDependencies": {
+    "@phosphor-icons/react": "^2.0.5",
+    "@types/react-dom": "^18.0.6",
+    "prettier": "^2"
   },
   "engines": {
     "node": ">=12.0.0"
