--- a/packages/apps/todomvc/project.json
+++ b/packages/apps/todomvc/project.json
@@ -6,25 +6,37 @@
       "options": {
         "main": "packages/apps/todomvc/src/index.ts",
         "outputPath": "packages/apps/todomvc/dist",
-        "transformers": ["@dxos/log-hook/transformer"],
+        "transformers": [
+          "@dxos/log-hook/transformer"
+        ],
         "tsConfig": "packages/apps/todomvc/tsconfig.json"
       }
     },
     "bundle": {
-      "dependsOn": ["^build", "^bundle", "prebuild"],
+      "dependsOn": [
+        "^build",
+        "^bundle",
+        "prebuild"
+      ],
       "executor": "@nx/vite:build",
       "options": {
-        "outputPath": "packages/apps/todomvc/out/todomvc",
-        "generatePackageJson": false
+        "generatePackageJson": false,
+        "outputPath": "packages/apps/todomvc/out/todomvc"
       },
-      "outputs": ["{options.outputPath}"]
+      "outputs": [
+        "{options.outputPath}"
+      ]
     },
     "e2e": {
       "options": {
         "playwrightConfigPath": "packages/apps/todomvc/src/playwright/playwright.config.ts",
         "serve": "todomvc:preview",
-        "testPatterns": ["packages/apps/todomvc/src/playwright/**/*.spec.{ts,js}"],
-        "watchPatterns": ["packages/apps/todomvc/src/**/*"]
+        "testPatterns": [
+          "packages/apps/todomvc/src/playwright/**/*.spec.{ts,js}"
+        ],
+        "watchPatterns": [
+          "packages/apps/todomvc/src/**/*"
+        ]
       }
     },
     "lint": {},
@@ -33,7 +45,9 @@
       "options": {
         "script": "prebuild"
       },
-      "outputs": ["{projectRoot}/src/proto/gen"]
+      "outputs": [
+        "{projectRoot}/src/proto/gen"
+      ]
     },
     "preview": {
       "executor": "@nx/web:file-server",
