--- a/packages/apps/composer-app/project.json
+++ b/packages/apps/composer-app/project.json
@@ -6,24 +6,32 @@
       "options": {
         "main": "packages/apps/composer-app/src/index.ts",
         "outputPath": "packages/apps/composer-app/dist",
-        "transformers": ["@dxos/log-hook/transformer"],
+        "transformers": [
+          "@dxos/log-hook/transformer"
+        ],
         "tsConfig": "packages/apps/composer-app/tsconfig.json"
       }
     },
     "bundle": {
       "executor": "@nx/vite:build",
       "options": {
-        "outputPath": "packages/apps/composer-app/out/composer",
-        "generatePackageJson": false
+        "generatePackageJson": false,
+        "outputPath": "packages/apps/composer-app/out/composer"
       },
-      "outputs": ["{options.outputPath}"]
+      "outputs": [
+        "{options.outputPath}"
+      ]
     },
     "e2e": {
       "options": {
         "playwrightConfigPath": "packages/apps/composer-app/src/playwright/playwright.config.ts",
         "serve": "composer-app:preview",
-        "testPatterns": ["packages/apps/composer-app/src/playwright/**/*.spec.{ts,js}"],
-        "watchPatterns": ["packages/apps/composer-app/src/**/*"]
+        "testPatterns": [
+          "packages/apps/composer-app/src/playwright/**/*.spec.{ts,js}"
+        ],
+        "watchPatterns": [
+          "packages/apps/composer-app/src/**/*"
+        ]
       }
     },
     "lint": {},
@@ -58,6 +66,8 @@
     }
   },
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": ["test"],
+  "implicitDependencies": [
+    "test"
+  ],
   "name": "composer-app"
 }
