--- a/packages/core/echo/automerge-index/project.json
+++ b/packages/core/echo/automerge-index/project.json
@@ -5,9 +5,7 @@
     "build": {},
     "compile": {
       "options": {
-        "entryPoints": [
-          "packages/core/echo/automerge-index/src/index.ts"
-        ],
+        "entryPoints": ["packages/core/echo/automerge-index/src/index.ts"],
         "injectGlobals": true
       }
     },
@@ -15,9 +13,6 @@
     "vitest": {}
   },
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": [
-    "esbuild",
-    "test"
-  ],
+  "implicitDependencies": ["esbuild", "test"],
   "name": "automerge-index"
 }
