--- a/package.json
+++ b/package.json
@@ -54,15 +54,15 @@
     "@dxos/toolbox": "workspace:*",
     "@dxos/typings": "workspace:*",
     "@mdx-js/react": "^2.1.3",
-    "@nx/devkit": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/linter": "17.2.8",
-    "@nx/storybook": "17.2.8",
+    "@nx/devkit": "17.3.2",
+    "@nx/eslint-plugin": "17.3.2",
+    "@nx/jest": "17.3.2",
+    "@nx/js": "17.3.2",
+    "@nx/linter": "17.3.2",
+    "@nx/storybook": "17.3.2",
     "@nx/vite": "17.3.2",
-    "@nx/web": "17.2.8",
-    "@nx/workspace": "17.2.8",
+    "@nx/web": "17.3.2",
+    "@nx/workspace": "17.3.2",
     "@playwright/test": "^1.36.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "@swc-node/register": "1.6.8",
@@ -74,15 +74,15 @@
     "@types/json-stringify-safe": "5.0.0",
     "@types/lodash.get": "^4.4.7",
     "@types/lodash.set": "^4.3.7",
-    "@types/node": "^18.11.9",
+    "@types/node": "18.19.15",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^18.0.21",
     "@types/sharedworker": "^0.0.111",
     "@types/uuid": "^8.3.0",
     "@types/wicg-file-system-access": "^2020.9.6",
     "@types/zen-observable": "^0.8.3",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "@vitest/browser": "^1.2.2",
     "@vitest/utils": "^1.2.2",
     "@vuepress/client": "2.0.0-rc.0",
@@ -108,7 +108,7 @@
     "mocha-junit-reporter": "^2.1.0",
     "mocha-multi-reporters": "^1.5.1",
     "node-fetch": "^2.6.0",
-    "nx": "17.2.8",
+    "nx": "17.3.2",
     "nyc": "^15.1.0",
     "pkg-up": "^3.1.0",
     "prettier": "^3.2.4",
@@ -123,7 +123,7 @@
     "ts-node": "10.9.1",
     "tsx": "^4.6.2",
     "types-package-json": "^2.0.39",
-    "typescript": "^5.2.2",
+    "typescript": "5.3.3",
     "uuid": "^8.3.2",
     "vite": "^5.1.0",
     "vite-plugin-node-polyfills": "^0.19.0",
@@ -143,8 +143,7 @@
     "patchedDependencies": {
       "memdown@5.1.0": "patches/memdown@5.1.0.patch",
       "ts-node@10.9.1": "patches/ts-node@10.9.1.patch",
-      "uuid@8.3.2": "patches/uuid@8.3.2.patch",
-      "@nx/js@17.2.8": "patches/@nx__js@17.2.8.patch"
+      "uuid@8.3.2": "patches/uuid@8.3.2.patch"
     }
   }
 }
