--- a/packages/core/echo/echo-pipeline/package.json
+++ b/packages/core/echo/echo-pipeline/package.json
@@ -70,7 +70,7 @@
     "crc-32": "^1.2.2"
   },
   "devDependencies": {
-    "fast-check": "~3.3.0",
+    "fast-check": "^3.15.1",
     "hypercore-protocol": "^8.0.7",
     "source-map-support": "^0.5.12",
     "wait-for-expect": "^3.0.2"
