--- a/packages/core/echo/echo-schema/package.json
+++ b/packages/core/echo/echo-schema/package.json
@@ -58,6 +58,9 @@
     "@dxos/text-model": "workspace:*",
     "@dxos/tracing": "workspace:*",
     "@dxos/util": "workspace:*",
+    "@effect/schema": "^0.62.1",
+    "effect": "^2.3.1",
+    "fast-check": "^3.15.1",
     "lodash.defaultsdeep": "^4.6.1",
     "lodash.get": "^4.4.2"
   },
