--- a/packages/core/mesh/network-manager/package.json
+++ b/packages/core/mesh/network-manager/package.json
@@ -53,7 +53,7 @@
     "@types/simple-peer": "9.11.3",
     "@types/ws": "^7.4.0",
     "earljs": "~0.1.10",
-    "fast-check": "~3.3.0",
+    "fast-check": "^3.15.1",
     "typescript": "^5.2.2"
   },
   "publishConfig": {
