--- a/packages/core/mesh/teleport-extension-replicator/package.json
+++ b/packages/core/mesh/teleport-extension-replicator/package.json
@@ -36,7 +36,7 @@
     "@dxos/keyring": "workspace:*",
     "@dxos/random-access-storage": "workspace:*",
     "add": "^2.0.6",
-    "fast-check": "~3.3.0",
+    "fast-check": "^3.15.1",
     "typescript": "^5.2.2"
   },
   "publishConfig": {
