--- a/packages/sdk/client/package.json
+++ b/packages/sdk/client/package.json
@@ -143,7 +143,7 @@
     "@types/lodash.isequal": "^4.5.0",
     "@types/lodash.isequalwith": "^4.4.0",
     "@types/node": "^18.11.9",
-    "fast-check": "~3.3.0",
+    "fast-check": "^3.15.1",
     "source-map-support": "^0.5.12"
   },
   "engines": {
