--- a/packages/core/echo/automerge-index/package.json
+++ b/packages/core/echo/automerge-index/package.json
@@ -20,6 +20,8 @@
     "src"
   ],
   "dependencies": {
+    "@dxos/async": "workspace:*",
+    "@dxos/automerge": "workspace:*",
     "@dxos/log": "workspace:*"
   },
   "devDependencies": {},
