--- a/packages/core/echo/automerge-index/tsconfig.json
+++ b/packages/core/echo/automerge-index/tsconfig.json
@@ -13,7 +13,13 @@
   ],
   "references": [
     {
+      "path": "../../../common/async"
+    },
+    {
       "path": "../../../common/log"
+    },
+    {
+      "path": "../automerge"
     }
   ]
 }
