--- a/packages/apps/plugins/plugin-space/package.json
+++ b/packages/apps/plugins/plugin-space/package.json
@@ -50,6 +50,7 @@
     "react-is": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
     "@braneframe/plugin-client": "workspace:*",
     "@braneframe/plugin-graph": "workspace:*",
     "@braneframe/plugin-layout": "workspace:*",
@@ -65,9 +66,12 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vue": "^3.3.12",
+    "vuepress": "2.0.0-rc.0"
   },
   "peerDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@braneframe/plugin-client": "workspace:*",
     "@braneframe/plugin-graph": "workspace:*",
     "@braneframe/plugin-layout": "workspace:*",
