--- a/packages/devtools/cli/package.json
+++ b/packages/devtools/cli/package.json
@@ -84,6 +84,7 @@
     "@types/node": "^18.11.9",
     "@types/node-fetch": "^2.5.10",
     "@types/react-dom": "^18.0.6",
+    "fast-check": "^3.15.1",
     "oclif": "^3.7.0",
     "prettier": "^3.2.4",
     "shx": "^0.3.3",
