--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,8 @@ jobs:
       - checkout
       - *cache_restore
       - run: pnpm set verify-store-integrity false
+      # check for missing peer dependencies
+      - run: pnpm install --no-lockfile
       - run: pnpm install --prefer-offline
       - run: pnpm install-playwright
       - *cache_save
