--- a/packages/apps/plugins/plugin-stack/package.json
+++ b/packages/apps/plugins/plugin-stack/package.json
@@ -29,7 +29,9 @@
     "@dxos/react-ui-mosaic": "workspace:*",
     "@dxos/react-ui-stack": "workspace:*",
     "@dxos/util": "workspace:*",
+    "@effect/schema": "^0.62.1",
     "deepsignal": "^1.5.0",
+    "effect": "^2.3.1",
     "node-fetch": "^2.6.0",
     "react-drag-drop-files": "^2.3.8",
     "react-is": "^18.2.0"
