--- a/packages/apps/types/project.json
+++ b/packages/apps/types/project.json
@@ -13,6 +13,10 @@
         "injectGlobals": true
       }
     },
-    "lint": {}
-  }
+    "lint": {},
+    "test": {}
+  },
+  "implicitDependencies": [
+    "test"
+  ]
 }
